test/typecheck/errors/bad-views15.boa
v1: table[year: int][projectID: string][fileName: string] of temp: int;
v2: table[first: string][second: string] of third: int;

r1: v1._row;
r2: v2._row;

r1 = r2;
